[package]
authors = ["Luqman Aden <me@luqman.ca>"]
name = "gdax_client"
version = "1.1.0"

[dependencies]
base64 = "0.9.2"
http = "0.1.5"
hyper = "0.12.1"
futures = "0.1.21"
#curl = "0.4.12"
#futures = "0.2.1"
rust-crypto = "0.2.36"
serde = "1.0.66"
serde_json = "1.0.20"
serde_derive = "1.0.66"
time = "0.1.40"

[dependencies.chrono]
features = ["serde"]
version = "0.4.2"

[dependencies.uuid]
features = ["serde"]
version = "0.6.5"

[dev-dependencies]
env_logger = "0.3"
uuid = { version = "0.6.5", features = ["v4", "serde"] }
