[package]
authors = ["Luqman Aden <me@luqman.ca>", "Steve Roudebush <roudy@umich.edu>"]
name = "gdax_client"
version = "1.2.0"

[dependencies]
base64 = "0.9.2"
curl = "0.4.12"
futures = "0.2.1"
rust-crypto = "0.2.36"
serde = "1.0.66"
serde_json = {version ="1.0.21", features = ["arbitrary_precision"]}
serde_derive = "1.0.66"
time = "0.1.40"

[dependencies.chrono]
features = ["serde"]
version = "0.4.2"

[dependencies.uuid]
features = ["serde"]
version = "0.6.5"

[dev-dependencies]
env_logger = "0.3"
uuid = { version = "0.6.5", features = ["v4", "serde"] }
